bk_ida/gccida/c3/regmove_optimize
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1561:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1567:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1567:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1568:4: error: expected ';' after expression
rtx v54; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1568:5: error: use of undeclared identifier 'v54'
rtx v54; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1576:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1576:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1578:4: error: expected ';' after expression
rtx v64; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1578:5: error: use of undeclared identifier 'v64'
rtx v64; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1595:4: error: expected ';' after expression
rtx regno_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1595:5: error: use of undeclared identifier 'regno_note'; did you mean 'reg_note'?
rtx regno_note; // rax 
    ^~~~~~~~~~
    reg_note
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1551:5: note: 'reg_note' declared here
rtx reg_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1596:4: error: expected ';' after expression
rtx real_insn; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1596:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // r12 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1598:4: error: expected ';' after expression
rtx v84; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1598:5: error: use of undeclared identifier 'v84'
rtx v84; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1609:4: error: expected ';' after expression
rtx v95; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1609:5: error: use of undeclared identifier 'v95'
rtx v95; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1613:4: error: expected ';' after expression
rtx v99; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/regmove.c:1613:5: error: use of undeclared identifier 'v99'
rtx v99; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regmove_optimize/src/obj/regmove.o] Error 1
